Add How to Choose a Web Designer

--- a/blog.html
+++ b/blog.html
@@ -13,13 +13,13 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Blog | Web Designer Erith Bexley South East London | Sybiltec</title>       
-        <meta name="Description" content="Sybiltec provides website development and e-commerce services for SMEs. Read my blog posts to learn about the latest industry news and company updates.">
+        <meta name="Description" content="Sybiltec provides website design services in the South East London areaa. Read my blog posts to keep yourself updated with industry news and company updates.">
         <meta name="robots" content="all">
         <link rel="canonical" href="https://sybiltec.com/blog">
         <meta property="og:locale" content="en_GB" />
         <meta property="og:type" content="website" />
         <meta property="og:title" content="Blog | Web Designer Erith Bexley South East London | Sybiltec" />
-        <meta property="og:description" content="Sybiltec provides website development and e-commerce services for SMEs. Read my blog posts to learn about the latest industry news and company updates." />
+        <meta property="og:description" content="Sybiltec provides website design services in the South East London areaa. Read my blog posts to keep yourself updated with industry news and company updates." />
         <meta property="og:url" content="https://sybiltec.com/blog" />
         <meta property="og:site_name" content="Sybiltec" />
         <meta property="og:image" content="https://sybiltec.com/images/logos/sybiltec-logo-social.png" />
@@ -83,10 +83,16 @@
         </div>
         <div class="main section">
             <div class="container-1140">
-                <h2>How to Improve the SEO of Your Website</h2>
-                    <p>One of the most effective ways to increase traffic to your website is through search, so after you've launched your website, the next step is to work on the SEO (search engine optimisation) of your site, helping it to rank in the highest possible position in search engine results pages (SERPs). …</p>
-                    <br>
-                    <a class="btn-primary" href="https://sybiltec.com/improve-website-seo">Improve My SEO</a>
+                <h2>How to Choose a Web Designer</h2>
+                <p>Building a website may be a daunting task if you've never done it before or you don't have the time and/or skills to do it. Hiring a professional may be the best option, but with so much choice, it's difficult to find the right person for the job. Read this post to find out how you can choose the best web designer for your project. …</p>
+                <br>
+                <a class="btn-primary" href="https://sybiltec.com/how-to-choose-web-designer">Choose a Web Designer</a>
+                <div class="padding-top">
+                    <h2>How to Improve the SEO of Your Website</h2>
+                        <p>One of the most effective ways to increase traffic to your website is through search, so after you've launched your website, the next step is to work on the SEO (search engine optimisation) of your site, helping it to rank in the highest possible position in search engine results pages (SERPs). …</p>
+                        <br>
+                        <a class="btn-primary" href="https://sybiltec.com/improve-website-seo">Improve My SEO</a>
+                </div>
                 <div class="padding-top">
                     <h2>How to Backup Your WordPress Website with UpdraftPlus</h2>
                     <p>Ask yourself a question: when was the last time you backed up your WordPress website? Hopefully the answer is not "three years ago", or worse still, "never"! Imagine spending weeks or months on building your website, only to lose all the results of your hard work forever 😭 …</p>
@@ -134,12 +140,6 @@
                     <p>If you are planning to sell your products or services online, it can be a difficult task choosing the best platform for your business. In this blog article, I explain the differences, pros and cons of the world's two most popular e-commerce store builders: Shopify and WooCommerce. …</p>
                     <br>
                 <a class="btn-primary" href="https://sybiltec.com/shopify-woocommerce">Read More</a>
-                </div>
-                <div class="padding-top">
-                    <h2>The Web Design Process Explained in 12 Easy Steps</h2>
-                    <p>Thank you so much for considering designing a website with me - you've certainly made the right choice! If you're wondering what the web design process is like, I've outlined the steps in this article to help you understand what is involved and help you decide if you're ready to start a project. …</p>
-                    <br>
-                    <a class="btn-primary" href="https://sybiltec.com/web-design-process-explained-12-easy-steps">Read More</a>
                 </div>
                 <div class="center padding-top padding-bottom"><a href="https://sybiltec.com/blog-2">Page 2</a></div>
             </div>
