--- a/index.html
+++ b/index.html
@@ -330,6 +330,20 @@
                     <p>Read my latest blog posts.</p>
                 </div>
                 <div class="row">
+                    <div class="col-4">          
+                        <div class="blog-card">
+                            <a href="https://sybiltec.com/how-to-choose-web-designer"><img src="images/woman-sitting-in-front-of-turned-on-computer-monitor-350x183.jpg" 
+                                alt="Woman sitting in front of turned on computer monitor"></a>  
+                            <div class="blog-card-text">               
+                                <h3>How to Choose a Web Designer</h3>
+                                <p>09 January 2024</p>
+                                <p>Looking for a web designer can be a difficult task with so much choice nowadays. Keep reading to find out how to choose the best person for the job. </p>
+                                <div class="padding-bottom padding-top">
+                                    <a class="btn-primary" href="https://sybiltec.com/how-to-choose-web-designer">Choose a Web Designer</a>   
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                     <div class="col-4">
                         <div class="blog-card">   
                             <a href="https://sybiltec.com/improve-website-seo"><img src="images/google-search-console-350x183.jpg" 
@@ -344,20 +358,6 @@
                             </div>
                         </div> 
                     </div>
-                    <div class="col-4">          
-                        <div class="blog-card">  
-                            <a href="https://sybiltec.com/backup-wordpress-website-using-updraftplus"><img src="images/external-hard-drive-with-brushed-stainless-steel-case-350x183.jpg" 
-                                alt="External hard drive with brushed stainless steel case"></a>  
-                            <div class="blog-card-text">               
-                                <h3>How to Backup Your WordPress Website with UpdraftPlus</h3>
-                                <p>19 December 2023</p>
-                                <p>Ensure that you make backups of your website on a regular basis so that your content is retrievable in case your website is lost for any reason.</p>
-                                <div class="padding-bottom padding-top">
-                                    <a class="btn-primary" href="https://sybiltec.com/backup-wordpress-website-using-updraftplus">Backup Your Website</a>   
-                                </div>
-                            </div>
-                        </div>
-                    </div> 
                     <div class="col-4">  
                         <div class="blog-card">   
                             <a href="https://sybiltec.com/bexley-talking-business">
