Various SEO improvements

--- a/6-reasons-to-use-shopify.html
+++ b/6-reasons-to-use-shopify.html
@@ -99,7 +99,7 @@
         </div>
         <div class="main section">
             <div class="container-1140">
-                <p>Date published: 29 September 2020 | Date Updated: 27 December 2023</p>
+                <p>Date Updated: 27 December 2023</p>
                 <p>Are you planning to sell your products or services online? Consider choosing <strong>Shopify</strong>, one of the most popular e-commerce platforms. Here I present to 
                     you a few of the benefits you can enjoy.</p>
 
@@ -221,7 +221,7 @@
                         <p><a href="https://sybiltec.com/about">About</a></p>
                         <p><a href="https://sybiltec.com/contact">Contact</a></p>
                         <p><a href="https://sybiltec.com/terms-and-conditions">Terms and Conditions</a></p>
-                        <p><a href="https://sybiltec.com/uploads/privacy-policy-v3.pdf" target="_blank">Privacy Policy</a></p>
+                        <p><a href="https://sybiltec.com/uploads/privacy-policy-v3.pdf" target="_blank">Privacy Notice</a></p>
                     </div>
                     <div class="col-3">
                         <h4>Services</h4>
