--- a/backup-wordpress-website-using-updraftplus.html
+++ b/backup-wordpress-website-using-updraftplus.html
@@ -99,7 +99,7 @@
         </div>
         <div class="main section">
             <div class="container-1140">
-                <p>Date published: 19 December 2023 | Date updated: 20 December 2023</p>
+                <p>Date updated: 20 December 2023</p>
                 <h2>Why Should You Backup Your Website?</h2>
 
                 <p>Ask yourself a question: when was the last time you <strong>backed up your WordPress website</strong>? Hopefully the answer is not “three years ago”, or worse still, “never”!</p>
@@ -181,7 +181,7 @@
                         <p><a href="https://sybiltec.com/about">About</a></p>
                         <p><a href="https://sybiltec.com/contact">Contact</a></p>
                         <p><a href="https://sybiltec.com/terms-and-conditions">Terms and Conditions</a></p>
-                        <p><a href="https://sybiltec.com/uploads/privacy-policy-v3.pdf" target="_blank">Privacy Policy</a></p>
+                        <p><a href="https://sybiltec.com/uploads/privacy-policy-v3.pdf" target="_blank">Privacy Notice</a></p>
                     </div>
                     <div class="col-3">
                         <h4>Services</h4>
