--- a/blog-2.html
+++ b/blog-2.html
@@ -119,9 +119,7 @@
                 </div>
                 <div class="padding-top">
                     <h2>7 Reasons Why You Should be Using Shopify</h2>
-                    <p>Are you planning to sell your products or services online? Consider choosing 
-                        <a href="https://shopify.co.uk" target="_blank" rel="noopener noreferrer">
-                            Shopify</a>, one of the most popular e-commerce platforms. Here I present to you a few of the benefits you can enjoy. Customisable Themes Coding and design skills are not necessary to make your store look unique and fabulous! Shopify offers a selection of …</p>
+                    <p>Are you planning to sell your products or services online? Consider choosing Shopify, one of the most popular e-commerce platforms. Here I present to you a few of the benefits you can enjoy. Customisable Themes Coding and design skills are not necessary to make your store look unique and fabulous! Shopify offers a selection of …</p>
                         <br>
                         <a class="btn-primary" href="https://sybiltec.com/6-reasons-to-use-shopify">Read More</a>
                 </div>
@@ -162,7 +160,7 @@
                         <p><a href="https://sybiltec.com/about">About</a></p>
                         <p><a href="https://sybiltec.com/contact">Contact</a></p>
                         <p><a href="https://sybiltec.com/terms-and-conditions">Terms and Conditions</a></p>
-                        <p><a href="https://sybiltec.com/uploads/privacy-policy-v3.pdf" target="_blank">Privacy Policy</a></p>
+                        <p><a href="https://sybiltec.com/uploads/privacy-policy-v3.pdf" target="_blank">Privacy Notice</a></p>
                     </div>
                     <div class="col-3">
                         <h4>Services</h4>
