--- a/cyber-security-best-practices-for-business.html
+++ b/cyber-security-best-practices-for-business.html
@@ -98,7 +98,7 @@
         </div>
         <div class="main section">
             <div class="container-1140">
-                <p>Date updated: 06 January 2024 | Date published: 18 October 2022</p>
+                <p>Date updated: 06 January 2024</p>
                 <p>Cybercrime is constantly on the rise; make sure to keep yourself, your business and your customers safe by following the tips in this blog.</p>
 
                 <p>By following good <strong>cyber security practices</strong>, you can enjoy a safe and secure experience both online and offline.</p>
@@ -260,7 +260,7 @@
                         <p><a href="https://sybiltec.com/about">About</a></p>
                         <p><a href="https://sybiltec.com/contact">Contact</a></p>
                         <p><a href="https://sybiltec.com/terms-and-conditions">Terms and Conditions</a></p>
-                        <p><a href="https://sybiltec.com/uploads/privacy-policy-v3.pdf" target="_blank">Privacy Policy</a></p>
+                        <p><a href="https://sybiltec.com/uploads/privacy-policy-v3.pdf" target="_blank">Privacy Notice</a></p>
                     </div>
                     <div class="col-3">
                         <h4>Services</h4>
