--- a/faqs.html
+++ b/faqs.html
@@ -370,7 +370,7 @@
                         <p><a href="https://sybiltec.com/about">About</a></p>
                         <p><a href="https://sybiltec.com/contact">Contact</a></p>
                         <p><a href="https://sybiltec.com/terms-and-conditions">Terms and Conditions</a></p>
-                        <p><a href="https://sybiltec.com/uploads/privacy-policy-v3.pdf" target="_blank">Privacy Policy</a></p>
+                        <p><a href="https://sybiltec.com/uploads/privacy-policy-v3.pdf" target="_blank">Privacy Notice</a></p>
                     </div>
                     <div class="col-3">
                         <h4>Services</h4>
