--- a/fix-slow-wordpress-website.html
+++ b/fix-slow-wordpress-website.html
@@ -99,7 +99,7 @@
         </div>
         <div class="main section">
             <div class="container-1140">
-                <p>Date published: 8 December 2023 | date updated: 15 December 2023</p>
+                <p>Date updated: 15 December 2023</p>
 
                 <div class="center"><img src="https://sybiltec.com/images/mr-bean-waiting.png" alt="Mr Bean waiting: when your website takes more than 3 seconds to load"></div>
                 
@@ -220,7 +220,7 @@
                         <p><a href="https://sybiltec.com/about">About</a></p>
                         <p><a href="https://sybiltec.com/contact">Contact</a></p>
                         <p><a href="https://sybiltec.com/terms-and-conditions">Terms and Conditions</a></p>
-                        <p><a href="https://sybiltec.com/uploads/privacy-policy-v3.pdf" target="_blank">Privacy Policy</a></p>
+                        <p><a href="https://sybiltec.com/uploads/privacy-policy-v3.pdf" target="_blank">Privacy Notice</a></p>
                     </div>
                     <div class="col-3">
                         <h4>Services</h4>
