--- a/improve-website-seo.html
+++ b/improve-website-seo.html
@@ -99,7 +99,7 @@
         </div>
         <div class="main section">
             <div class="container-1140">
-                <p>Date updated: 04 January 2024 | Date published: 26 December 2023</p>
+                <p>Date updated: 04 January 2024</p>
                 <h2>What is SEO?</h2>
 
                 <p>When you type a query into a search engine, the search engine checks its index and returns a list of results. The search engine uses an algorithm to determine which results to display and in which order to display them, according to how relevant each result is to your query.</p>
@@ -297,7 +297,7 @@
                         <p><a href="https://sybiltec.com/about">About</a></p>
                         <p><a href="https://sybiltec.com/contact">Contact</a></p>
                         <p><a href="https://sybiltec.com/terms-and-conditions">Terms and Conditions</a></p>
-                        <p><a href="https://sybiltec.com/uploads/privacy-policy-v3.pdf" target="_blank">Privacy Policy</a></p>
+                        <p><a href="https://sybiltec.com/uploads/privacy-policy-v3.pdf" target="_blank">Privacy Notice</a></p>
                     </div>
                     <div class="col-3">
                         <h4>Services</h4>
