--- a/install-ga4-shopify-website.html
+++ b/install-ga4-shopify-website.html
@@ -100,23 +100,23 @@
                 <h2>Google Analytics 4 Installation on Shopify</h2>
                 <p>Date published: 19 June 2023</p>
 
-                <p>You must remove password protection from your Shopify store in order to allow Google Analytics to track events.</p>
+                <p>You must remove password protection from your <strong>Shopify</strong> store in order to allow <strong>Google Analytics</strong> to track events.</p>
 
                 <p>This article assumes that you have created a GA4 property already. If you haven't yet done so, please read my article, <a href="https://sybiltec.com/upgrade-google-analytics-4">How Do I Upgrade to Google Analytics 4?</a></p>
 
-                <p>Firstly, find your Google Analytics measurement ID. This can be found from the <strong>Web stream</strong> details page in your Google Analytics account.</p>
+                <p>Firstly, find your Google Analytics measurement ID. This can be found from the <em>Web stream</em> details page in your Google Analytics account.</p>
 
                 <img class="screenshot" src="images/screenshots/google-analytics-web-stream-details.png" alt="Google Analytics web stream details">
 
-                <p>From your Shopify admin, go to <strong>Online Store</strong> > <strong>Preferences</strong>.</p>
+                <p>From your Shopify admin, go to <em>Online Store</em> > <em>Preferences</em>.</p>
 
                 <img class="screenshot" src="images/screenshots/shopify-online-store-preferences.png" alt="Shopify online store preferences">
 
-                <p>Scroll down to the <strong>Google Analytics</strong> section and click <strong>Manage pixel here</strong>.</p>
+                <p>Scroll down to the <em>Google Analytics</em> section and click <em>Manage pixel here</em>.</p>
 
                 <img class="screenshot" src="images/screenshots/shopify-manage-pixel-here.png" alt="Shopify Google Analytics manage pixel here">
 
-                <p>Click <strong>Add sales channel</strong>.</p>
+                <p>Click <em>Add sales channel</em>.</p>
 
                 <img class="screenshot" src="images/screenshots/shopify-add-google-and-youtube.png" alt="Shopify add Google & YouTube sales channel">
 
@@ -124,11 +124,11 @@
 
                 <img class="screenshot" src="images/screenshots/shopify-google-channel.png" alt="Choose an account to continue to Google Channel by Shopify">
 
-                <p>Click <strong>Allow</strong>.</p>
+                <p>Click <em>Allow</em>.</p>
 
                 <img class="screenshot" src="images/screenshots/shopify-trust-google-channel.png" alt="Shopify trust Google Channel">
 
-                <p>In the <strong>Connect a Google Analytics property</strong> section, select the GA4 property from the dropdown and click the <strong>Connect</strong> button.</p>
+                <p>In the <em>Connect a Google Analytics property</em> section, select the GA4 property from the dropdown and click the <em>Connect</em> button.</p>
 
                 <img class="screenshot" src="images/screenshots/shopify-connect-google-analytics-property.png" alt="Shopify connect a Google Analytics property">
 
@@ -156,7 +156,7 @@
                         <p><a href="https://sybiltec.com/about">About</a></p>
                         <p><a href="https://sybiltec.com/contact">Contact</a></p>
                         <p><a href="https://sybiltec.com/terms-and-conditions">Terms and Conditions</a></p>
-                        <p><a href="https://sybiltec.com/uploads/privacy-policy-v3.pdf" target="_blank">Privacy Policy</a></p>
+                        <p><a href="https://sybiltec.com/uploads/privacy-policy-v3.pdf" target="_blank">Privacy Notice</a></p>
                     </div>
                     <div class="col-3">
                         <h4>Services</h4>
