--- a/install-ga4-wix-website.html
+++ b/install-ga4-wix-website.html
@@ -100,33 +100,33 @@
                 <h2>Google Analytics 4 Installation on Wix</h2>
                 <p>Date published: 19 June 2023</p>
 
-                <p>Your website must be on a Wix Premium Plan in order to connect Google Analytics to it.</p>
+                <p>Your website must be on a <strong>Wix Premium Plan</strong> in order to connect <strong>Google Analytics</strong> to it.</p>
 
                 <p>This article assumes that you have created a GA4 property already. If you haven't yet done so, please read my article, <a href="https://sybiltec.com/upgrade-google-analytics-4">How Do I Upgrade to Google Analytics 4?</a></p>
 
-                <p>Firstly, find your Google Analytics measurement ID. This can be found from the <strong>Web stream</strong> details page in your Google Analytics account.</p>
+                <p>Firstly, find your Google Analytics measurement ID. This can be found from the <em>Web stream</em> details page in your Google Analytics account.</p>
 
                 <img class="screenshot" src="images/screenshots/google-analytics-web-stream-details.png" alt="Google Analytics web stream details">
 
-                <p>Log into your Wix website. In the search bar, type <em>Google Analytics</em> and click the <strong>Marketing Integrations</strong> result from the dropdown.</p>
+                <p>Log into your Wix website. In the search bar, type <em>Google Analytics</em> and click the <em>Marketing Integrations</em> result from the dropdown.</p>
 
                 <img class="screenshot" src="images/screenshots/wix-search-bar-google-analytics.png" alt="Wix search bar google analytics">
 
-                <p>On the <strong>Marketing Integrations</strong> page, in the Google Analytics box, click on the <strong>Connect</strong> or <strong>View</strong> button.</p>
+                <p>On the <em>Marketing Integrations</em> page, in the Google Analytics box, click on the <em>Connect</em> or <em>View</em> button.</p>
 
                 <img class="screenshot" src="images/screenshots/wix-google-analytics-connect.png" alt="Wix connectGoogle Analytics">
                 <br>
                 <img class="screenshot" src="images/screenshots/wix-google-analytics-view.png" alt="Wix view Google Analytics">
 
-                <p>If you don't have GA connected already, click the <strong>Add Google Analytics ID</strong> button.</p>
+                <p>If you don't have GA connected already, click the <em>Add Google Analytics ID</em> button.</p>
 
                 <img class="screenshot" src="images/screenshots/wix-add-google-analytics-id.png" alt="Wix add Google Analytics ID">
 
-                <p>Otherwise, if GA is connected already, click the three dots in the top right-hand corner and click <strong>Edit</strong>.</p>
+                <p>Otherwise, if GA is connected already, click the three dots in the top right-hand corner and click <em>Edit</em>.</p>
 
                 <img class="screenshot" src="images/screenshots/wix-google-analytics-edit.png" alt="Wix edit Google Analytics">
 
-                <p>Enter your measurement ID in the box, and click the <strong>Save</strong> button.</p>
+                <p>Enter your measurement ID in the box, and click the <em>Save</em> button.</p>
 
                 <img class="screenshot" src="images/screenshots/wix-add-your-google-analytics-code.png" alt="Wix add your Google Analytics code">
             </div>
@@ -153,7 +153,7 @@
                         <p><a href="https://sybiltec.com/about">About</a></p>
                         <p><a href="https://sybiltec.com/contact">Contact</a></p>
                         <p><a href="https://sybiltec.com/terms-and-conditions">Terms and Conditions</a></p>
-                        <p><a href="https://sybiltec.com/uploads/privacy-policy-v3.pdf" target="_blank">Privacy Policy</a></p>
+                        <p><a href="https://sybiltec.com/uploads/privacy-policy-v3.pdf" target="_blank">Privacy Notice</a></p>
                     </div>
                     <div class="col-3">
                         <h4>Services</h4>
