--- a/install-ga4-wordpress-website.html
+++ b/install-ga4-wordpress-website.html
@@ -104,27 +104,27 @@
 
                 <p>This article assumes that you have created a GA4 property already. If you haven't yet done so, please read my article, <a href="https://sybiltec.com/upgrade-google-analytics-4">How Do I Upgrade to Google Analytics 4?</a></p>
 
-                <p>Firstly, find your Google Analytics measurement ID. This can be found from the <strong>Web stream</strong> details page in your Google Analytics account.</p>
+                <p>Firstly, find your Google Analytics measurement ID. This can be found from the <em>Web stream</em> details page in your Google Analytics account.</p>
 
                 <img class="screenshot" src="images/screenshots/google-analytics-web-stream-details.png" alt="Google Analytics web stream details">
 
                 <p>Log into your WordPress admin.</p>
 
-                <p>Go to <strong>Plugins</strong> > <strong>Add New</strong>, then search for <em>MonsterInsights</em>.</p>
+                <p>Go to <em>Plugins</em> > <em>Add New</em>, then search for <em>MonsterInsights</em>.</p>
 
-                <p>Click <strong>Install Now</strong>, and then activate the plugin.</p>
+                <p>Click <em>Install Now</em>, and then activate the plugin.</p>
 
                 <img class="screenshot" src="images/screenshots/wordpress-monsterinsights-install-now.png" alt="Install MonsterInsights">
 
-                <p>Click the <strong>Launch the Wizard!</strong> button.</p>
+                <p>Click the <em>Launch the Wizard!</em> button.</p>
 
                 <img class="screenshot" src="images/screenshots/getting-started-with-monsterinsights.png" alt="Getting Started With MonsterInsights">
 
-                <p>Select the type of website, and click <strong>Save and Continue</strong>.</p>
+                <p>Select the type of website, and click <em>Save and Continue</em>.</p>
 
                 <img class="screenshot" src="images/screenshots/welcome-to-monsterinsights.png" alt="Welcome to MonsterInsights!">
 
-                <p>Click <strong>Connect MonsterInsights</strong>.</p>
+                <p>Click <em>Connect MonsterInsights</em>.</p>
 
                 <img class="screenshot" src="images/screenshots/connect-monsterinsights-to-your-website.png" alt="Connect MonsterInsights to your website">
 
@@ -132,11 +132,11 @@
 
                 <img class="screenshot" src="images/screenshots/continue-to-monsterinsights.png" alt="Continue to MonsterInsights">
 
-                <p>Click <strong>Allow</strong>.</p>
+                <p>Click <em>Allow</em>.</p>
 
                 <img class="screenshot" src="images/screenshots/trust-monsterinsights.png" alt="Trust MonsterInsights">
 
-                <p>Select your GA4 property from the dropdown and click <strong>Complete Connection</strong>.</p>
+                <p>Select your GA4 property from the dropdown and click <em>Complete Connection</em>.</p>
 
                 <img class="screenshot" src="images/screenshots/monsterinsights-pick-a-profile.png" alt="MonsterInsights pick a profile">
             </div>
@@ -163,7 +163,7 @@
                         <p><a href="https://sybiltec.com/about">About</a></p>
                         <p><a href="https://sybiltec.com/contact">Contact</a></p>
                         <p><a href="https://sybiltec.com/terms-and-conditions">Terms and Conditions</a></p>
-                        <p><a href="https://sybiltec.com/uploads/privacy-policy-v3.pdf" target="_blank">Privacy Policy</a></p>
+                        <p><a href="https://sybiltec.com/uploads/privacy-policy-v3.pdf" target="_blank">Privacy Notice</a></p>
                     </div>
                     <div class="col-3">
                         <h4>Services</h4>
