--- a/upgrade-google-analytics-4.html
+++ b/upgrade-google-analytics-4.html
@@ -98,7 +98,7 @@
         </div>
         <div class="main section">
             <div class="container-1140">
-                <p>Date updated: 31 December 2023 | Date published: 15 June 2023</p>
+                <p>Date updated: 31 December 2023</p>
 
                 <h2>What is GA4?</h2>
 
@@ -198,7 +198,7 @@
                         <p><a href="https://sybiltec.com/about">About</a></p>
                         <p><a href="https://sybiltec.com/contact">Contact</a></p>
                         <p><a href="https://sybiltec.com/terms-and-conditions">Terms and Conditions</a></p>
-                        <p><a href="https://sybiltec.com/uploads/privacy-policy-v3.pdf" target="_blank">Privacy Policy</a></p>
+                        <p><a href="https://sybiltec.com/uploads/privacy-policy-v3.pdf" target="_blank">Privacy Notice</a></p>
                     </div>
                     <div class="col-3">
                         <h4>Services</h4>
