--- a/website-review.html
+++ b/website-review.html
@@ -83,7 +83,7 @@
         </div>
         <div class="main section">
             <div class="container-1140 padding-top padding-bottom">
-                <p>If you know your website needs improvements but you don't know where to begin, start with a website review. This is a short analysis of your website which identifies issues within a range of areas, including but not limited to:</p>
+                <p>If you know your website needs improvements but you don't know where to begin, start with a <strong>website review</strong>. This is a short analysis of your website which identifies issues within a range of areas, including but not limited to:</p>
                 <ul>
                     <li>User-friendliness</li>
                     <li>Design</li>
@@ -141,7 +141,7 @@
                         <p><a href="https://sybiltec.com/about">About</a></p>
                         <p><a href="https://sybiltec.com/contact">Contact</a></p>
                         <p><a href="https://sybiltec.com/terms-and-conditions">Terms and Conditions</a></p>
-                        <p><a href="https://sybiltec.com/uploads/privacy-policy-v3.pdf" target="_blank">Privacy Policy</a></p>
+                        <p><a href="https://sybiltec.com/uploads/privacy-policy-v3.pdf" target="_blank">Privacy Notice</a></p>
                     </div>
                     <div class="col-3">
                         <h4>Services</h4>
