--- a/web-design-process-explained-12-easy-steps.html
+++ b/web-design-process-explained-12-easy-steps.html
@@ -97,7 +97,7 @@
         </div>
         <div class="main section">
             <div class="container-1140">
-                <p>Date published: 29 May 2023 | Date updated: 17 December 2023</p>
+                <p>Date updated: 17 December 2023</p>
 
                 <p>Thank you so much for considering designing a website with me - you've certainly made the right choice! If you're wondering what the <strong>web design process</strong> is like, I've outlined the steps below to help you understand what is involved.</p>
 
@@ -162,7 +162,7 @@
                         <p><a href="https://sybiltec.com/about">About</a></p>
                         <p><a href="https://sybiltec.com/contact">Contact</a></p>
                         <p><a href="https://sybiltec.com/terms-and-conditions">Terms and Conditions</a></p>
-                        <p><a href="https://sybiltec.com/uploads/privacy-policy-v3.pdf" target="_blank">Privacy Policy</a></p>
+                        <p><a href="https://sybiltec.com/uploads/privacy-policy-v3.pdf" target="_blank">Privacy Notice</a></p>
                     </div>
                     <div class="col-3">
                         <h4>Services</h4>
