Add blog on common website mistakes

--- a/blog.html
+++ b/blog.html
@@ -83,10 +83,16 @@
         </div>
         <div class="main section">
             <div class="container-1140">
-                <h2>How to Choose a Web Designer</h2>
-                <p>Building a website may be a daunting task if you've never done it before or you don't have the time and/or skills to do it. Hiring a professional may be the best option, but with so much choice, it's difficult to find the right person for the job. Read this post to find out how you can choose the best web designer for your project. …</p>
+                <h2>10 Common Website Mistakes and How to Avoid Them</h2>
+                <p>Having analysed a huge number of websites over the past few years, I've noticed that a few mistakes tend to appear again and again. Have a read of the following article and make sure you aren't making the same mistakes on your website. …</p>
                 <br>
-                <a class="btn-primary" href="https://sybiltec.com/how-to-choose-web-designer">Choose a Web Designer</a>
+                <a class="btn-primary" href="https://sybiltec.com/common-website-mistakes">Read More</a>
+                <div class="padding-top">
+                    <h2>How to Choose a Web Designer</h2>
+                    <p>Building a website may be a daunting task if you've never done it before or you don't have the time and/or skills to do it. Hiring a professional may be the best option, but with so much choice, it's difficult to find the right person for the job. Read this post to find out how you can choose the best web designer for your project. …</p>
+                    <br>
+                    <a class="btn-primary" href="https://sybiltec.com/how-to-choose-web-designer">Choose a Web Designer</a>
+                </div>
                 <div class="padding-top">
                     <h2>How to Improve the SEO of Your Website</h2>
                         <p>One of the most effective ways to increase traffic to your website is through search, so after you've launched your website, the next step is to work on the SEO (search engine optimisation) of your site, helping it to rank in the highest possible position in search engine results pages (SERPs). …</p>
@@ -134,12 +140,6 @@
                     <p>If you are using Google Analytics, you may be aware that there is a new version of Analytics called GA4. The current version, which is Universal Analytics, will stop processing new data on 1st July 2023, so you need to upgrade to GA4 before this date. Not sure which version of Google …</p>
                     <br>
                     <a class="btn-primary" href="https://sybiltec.com/upgrade-google-analytics-4">Upgrade GA Now</a>
-                </div>
-                <div class="padding-top">
-                    <h2>Shopify vs WooCommerce: What Are the Differences?</h2>
-                    <p>If you are planning to sell your products or services online, it can be a difficult task choosing the best platform for your business. In this blog article, I explain the differences, pros and cons of the world's two most popular e-commerce store builders: Shopify and WooCommerce. …</p>
-                    <br>
-                <a class="btn-primary" href="https://sybiltec.com/shopify-woocommerce">Read More</a>
                 </div>
                 <div class="center padding-top padding-bottom"><a href="https://sybiltec.com/blog-2">Page 2</a></div>
             </div>
