--- a/blog-2.html
+++ b/blog-2.html
@@ -83,10 +83,16 @@
         </div>
         <div class="main section">
             <div class="container-1140">
-                    <h2>The Web Design Process Explained in 12 Easy Steps</h2>
-                    <p>Thank you so much for considering designing a website with me - you've certainly made the right choice! If you're wondering what the web design process is like, I've outlined the steps in this article to help you understand what is involved and help you decide if you're ready to start a project. …</p>
+                    <h2>Shopify vs WooCommerce: What Are the Differences?</h2>
+                    <p>If you are planning to sell your products or services online, it can be a difficult task choosing the best platform for your business. In this blog article, I explain the differences, pros and cons of the world's two most popular e-commerce store builders: Shopify and WooCommerce. …</p>
                     <br>
-                    <a class="btn-primary" href="https://sybiltec.com/web-design-process-explained-12-easy-steps">Read More</a>
+                <a class="btn-primary" href="https://sybiltec.com/shopify-woocommerce">Read More</a>
+                    <div class="padding-top">
+                        <h2>The Web Design Process Explained in 12 Easy Steps</h2>
+                        <p>Thank you so much for considering designing a website with me - you've certainly made the right choice! If you're wondering what the web design process is like, I've outlined the steps in this article to help you understand what is involved and help you decide if you're ready to start a project. …</p>
+                        <br>
+                        <a class="btn-primary" href="https://sybiltec.com/web-design-process-explained-12-easy-steps">Read More</a>
+                    </div>
                 <div class="padding-top">
                     <h2>A Guide to Updating Your WordPress Website</h2>
                     <p>If you own a WordPress website, you need to be aware that the work doesn't end once your site has been launched. A WordPress website needs to be carefully maintained in order to keep it functioning well, ensuring that you benefit from the latest features and security updates. …</p>
