--- a/index.html
+++ b/index.html
@@ -330,6 +330,21 @@
                     <p>Read my latest blog posts.</p>
                 </div>
                 <div class="row">
+                    <div class="col-4">  
+                        <div class="blog-card">   
+                            <a href="https://sybiltec.com/common-website-mistakes">
+                                <img src="images/tired-young-female-employee-feeling-stressed-headache-and-burnout-from-computer-work-350x183.jpg" 
+                                alt="Tired Young Female Employee Feeling Stressed, Headache, and Burnout from Computer Work"></a>
+                            <div class="blog-card-text">                    
+                                <h3>10 Common Website Mistakes to Avoid</h3>
+                                <p>16 January 2024</p>
+                                <p>Website mistakes are easy to make, but can be avoided. Read on to learn how you can prevent the most common pitfalls of building a website.</p>
+                                <div class="padding-bottom padding-top">
+                                    <a class="btn-primary" href="https://sybiltec.com/common-website-mistakes">Read More</a>   
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                     <div class="col-4">          
                         <div class="blog-card">
                             <a href="https://sybiltec.com/how-to-choose-web-designer"><img src="images/woman-sitting-in-front-of-turned-on-computer-monitor-350x183.jpg" 
@@ -357,21 +372,6 @@
                                 </div>
                             </div>
                         </div> 
-                    </div>
-                    <div class="col-4">  
-                        <div class="blog-card">   
-                            <a href="https://sybiltec.com/bexley-talking-business">
-                                <img src="images/logos/TB-Business-Support.png" 
-                                alt="Bexley Talking Business - Business Support"></a>
-                            <div class="blog-card-text">                    
-                                <h3>Bexley Talking Business</h3>
-                                <p>14 December 2023</p>
-                                <p>If you are an SME/sole trader based in Bexley, you may be eligible for free business support. Start your registration now.</p>
-                                <div class="padding-bottom padding-top">
-                                    <a class="btn-primary" href="https://sybiltec.com/bexley-talking-business">Get Business Support</a>   
-                                </div>
-                            </div>
-                        </div>
                     </div>
                 </div>
             </div>
